--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
 	        <artifactId>prettytime</artifactId>
 	        <version>4.0.1.Final</version>
 	    </dependency>
+	    
+	    
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>jquery</artifactId>
+		    <version>1.9.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
